k8s/uploader-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: va-uploader-api
  namespace: video-analytics
  labels:
    app: video-analytics
    component: uploader-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-analytics
      component: uploader-api
  template:
    metadata:
      labels:
        app: video-analytics
        component: uploader-api
    spec:
      containers:
        - name: va-uploader-api
          image: 801867402650.dkr.ecr.us-east-1.amazonaws.com/uploader-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
      serviceAccountName: app-sa
