k8s/uploader-pvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: va-uploader-api
  namespace: video-analytics
  labels:
    app: video-analytics
    component: uploader-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-analytics
      component: uploader-api
  template:
    metadata:
      labels:
        app: video-analytics
        component: uploader-api
    spec:
      serviceAccountName: app-sa
      # --- FIX: Init Container to set permissions ---
      containers:
        - name: va-uploader-api
          image: 801867402650.dkr.ecr.us-east-1.amazonaws.com/uploader-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: uploader-storage-vol
              mountPath: /tmp/uploads
      volumes:
        - name: uploader-storage-vol
          persistentVolumeClaim:
            claimName: uploader-data
