k8s/uploader-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: va-uploader-svc
  namespace: video-analytics
  labels:
    app: video-analytics
    component: uploader-api
spec:
  type: ClusterIP
  selector:
    app: video-analytics
    component: uploader-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
